--- a/src/global.css
+++ b/src/global.css
@@ -24,6 +24,11 @@
     --font-bold: 700;
 }
 
+:focus {
+    outline: transparent;
+    box-shadow: 0 0 0 2px var(--purple-dark);
+}
+
 * {
     margin: 0;
     padding: 0;
