--- a/src/global.css
+++ b/src/global.css
@@ -45,4 +45,5 @@ body, input, textarea, button {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 1rem;
+    line-height: 1.4;
 }
