--- a/src/global.css
+++ b/src/global.css
@@ -47,3 +47,9 @@ body, input, textarea, button {
     font-size: 1rem;
     line-height: 1.4;
 }
+
+button {
+    background: transparent;
+    border: unset;
+    padding: 0;
+}
