--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,7 @@
     --gray-700: #0D0D0D;
 
     --blue: #4EA8DE;
+    --blue-rgb-value: 78,168,222;
     --blue-dark: #1E6F9F;
 
     --purple: #8284FA;
