--- a/src/App.module.css
+++ b/src/App.module.css
@@ -95,3 +95,12 @@
     flex-direction: column;
     gap: 0.75rem;
 }
+
+@media(max-width: 767px){
+    .container {
+        padding: 0 1rem;
+    }
+    .taskForm {
+        flex-direction: column;
+    }
+}
