--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -45,3 +45,45 @@
 .task .deleteTask:hover svg {
     fill: var(--danger);
 }
+
+
+.checkboxLabel {
+    min-width: 1.125rem;
+    min-height: 1.125rem;
+    
+    margin: .375rem;
+    padding: 0.125rem;
+
+    border-radius: 100%;
+    border: 2px solid var(--blue);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    cursor: pointer;
+
+    transition: border-color .2s, background-color .2s;
+}
+
+.checkboxLabel:hover {
+    background: rgba(var(--blue-rgb-value), .2);
+}
+
+.checkboxLabelChecked {
+    background: var(--purple-dark);
+    border-color: var(--purple-dark);
+}
+
+.checkboxLabelChecked:hover {
+    background: var(--purple);
+    border-color: var(--purple);
+}
+
+.checkboxLabel input[type="checkbox"] {
+    opacity: 0;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+}
